--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -14,7 +14,7 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    add_header X-Powered-By "Miguel Emmara";
+    add_header X-Powered-By "Lempzy";
     add_header Strict-Transport-Security "max-age=15552000" always; ## 180 days
     add_header X-FastCGI-Cache $upstream_cache_status;
     add_header X-Frame-Options SAMEORIGIN;
