--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -1,8 +1,9 @@
 user www-data;
 worker_processes auto;
-worker_rlimit_nofile 65536;
+worker_rlimit_nofile 100000;
 pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
+error_log /var/log/nginx/error.log crit;
 
 events {
     worker_connections 65536;
@@ -24,11 +25,9 @@ http {
     add_header Permissions-Policy "accelerometer=(), ambient-light-sensor=(), autoplay=*, battery=(), camera=(), display-capture=*, document-domain=*, encrypted-media=*, fullscreen=*, geolocation=(self), gyroscope=(), layout-animations=*, legacy-image-formats=*, magnetometer=(), microphone=(self), midi=(), oversized-images=*, payment=*, picture-in-picture=*, publickey-credentials-get=*, sync-xhr=*, usb=(), vibrate=(), wake-lock=(), xr-spatial-tracking=()";
 
     ## NOT CURRENTLY IN USED
-    ## add_header X-Content-Type-Options nosniff;
-    ## add_header X-XSS-Protection "1; mode=block";
-    ## add_header X-Frame-Options "SAMEORIGIN";
     ## add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
+    # NGINX Simple DDoS Defense
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
@@ -39,7 +38,7 @@ http {
     client_header_timeout 1m;
     client_max_body_size 5000m;
     keepalive_timeout 60 60;
-    large_client_header_buffers 4 16k;
+    large_client_header_buffers 4 256k;
     reset_timedout_connection on;
     send_timeout 65;
     server_name_in_redirect off;
@@ -71,7 +70,7 @@ http {
     fastcgi_busy_buffers_size 128k; 
     fastcgi_temp_file_write_size 256k;
 
-    open_file_cache max=10000 inactive=30s;
+    open_file_cache max=200000 inactive=30s;
     open_file_cache_valid 60s;
     open_file_cache_min_uses 3;
     open_file_cache_errors off;
@@ -83,9 +82,42 @@ http {
     gzip_comp_level 6;
     gzip_buffers 16 8k;
     gzip_http_version 1.1;
-    gzip_min_length 256;
+    gzip_min_length 10240;
     gzip_proxied expired no-cache no-store private auth;
-    gzip_types text/plain text/css text/xml text/javascript text/x-component text/mathml application/json application/javascript application/xml application/rss+xml application/atom+xml application/xhtml+xml application/xslt+xml application/vnd.ms-fontobject application/x-font-ttf application/x-web-app-manifest+json application/ld+json application/vnd.geo+json application/manifest+json application/font-woff application/font-woff2 image/svg+xml image/bmp image/gif image/jpeg image/png image/tiff image/vnd.wap.wbmp image/webp image/x-jng image/x-icon image/x-ms-bmp font/opentype text/cache-manifest;
+    gzip_types 
+        text/plain 
+        text/css 
+        text/xml 
+        text/javascript 
+        text/x-component 
+        text/mathml 
+        application/json 
+        application/javascript 
+        application/xml 
+        application/rss+xml 
+        application/atom+xml 
+        application/xhtml+xml 
+        application/xslt+xml 
+        application/vnd.ms-fontobject 
+        application/x-font-ttf 
+        application/x-web-app-manifest+json 
+        application/ld+json 
+        application/vnd.geo+json 
+        application/manifest+json 
+        application/font-woff 
+        application/font-woff2 
+        image/svg+xml 
+        image/bmp 
+        image/gif 
+        image/jpeg 
+        image/png 
+        image/tiff 
+        image/vnd.wap.wbmp 
+        image/webp 
+        image/x-jng 
+        image/x-icon 
+        image/x-ms-bmp 
+        font/opentype text/cache-manifest;
 
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
